--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="http://cdn.socket.io/stable/socket.io.js"></script>
   <script>WEB_SOCKET_SWF_LOCATION = 'http://cdn.socket.io/stable/WebSocketMain.swf';</script>
   <script src="/static/slrender.js"></script>
+  <script src="/static/mobs.js"></script>
   <script src="/static/game.js"></script>
   <script>
     window.onload = function() {
